add display client sample

--- a/examples/tracker.html
+++ b/examples/tracker.html
@@ -13,6 +13,10 @@
     <footer>
         <div>Design and Implemented by Dev Morning</div>
     </footer>
+    <script>
+        var RMT_API_PATH = "http://192.168.0.110:3000/track/?";
+
+    </script>
     <script src="../dist/tracker.js"></script>
     <script>
         var count = 0;
